# toolbench

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: FINDINGS.md
docs/superpowers/plans/: 2026-06-14-toolbench.md
docs/superpowers/specs/: 2026-06-14-toolbench-design.md
experiments/: decoy-tool.yaml  difficulty-sweep.yaml  example.yaml  no-tools-baseline.yaml  no-tools-xmodels.yaml  over-calling.yaml  under-calling-xmodels.yaml  under-calling.yaml
scripts/: plot_under_calling.py
tests/: test_agent.py  test_cli.py  test_client.py  test_experiment.py  test_metrics.py  test_safety.py  test_tools.py  test_trace.py
toolbench/: __init__.py  agent.py  cli.py  client.py  experiment.py  metrics.py  tools.py  trace.py
toolbench/builtins/: __init__.py  calculator.py  files.py  http_fetch.py  shell.py  weather.py
