[project]
name = "toolbench"
version = "0.1.0"
description = "A pluggable tool-calling agent experiment bench"
requires-python = ">=3.11"
dependencies = ["openai>=1.40", "pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["toolbench*"]
