[project]
name = "toolbench"
version = "0.1.0"
description = "A tiny harness for experimenting with how tool descriptions change LLM tool-calling behavior across models"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Aditya Raj" }]
keywords = ["llm", "agents", "tool-calling", "prompt-engineering", "openrouter", "evaluation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["openai>=1.40", "pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/Adityaraj0421/toolbench"
Repository = "https://github.com/Adityaraj0421/toolbench"
Findings = "https://github.com/Adityaraj0421/toolbench/blob/main/docs/FINDINGS.md"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["toolbench*"]
